--- a/requirements.txt
+++ b/requirements.txt
@@ -19,23 +19,22 @@ fire==0.4.0
 flatbuffers==1.12
 gast==0.4.0
 gin-config==0.5.0
-google-api-core==2.4.0
-google-api-python-client==2.36.0
-google-auth==2.5.0
+google-api-core==2.5.0
+google-api-python-client==2.37.0
+google-auth==2.6.0
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.4.6
 google-cloud-bigquery==2.32.0
 google-cloud-core==2.2.2
 google-crc32c==1.3.0
 google-pasta==0.2.0
-google-resumable-media==2.1.0
+google-resumable-media==2.2.1
 googleapis-common-protos==1.54.0
 grpcio==1.43.0
-grpcio-status==1.43.0
 h5py==3.6.0
-httplib2==0.20.2
+httplib2==0.20.4
 idna==3.3
-importlib-metadata==4.10.1
+importlib-metadata==4.11.0
 importlib-resources==5.4.0
 joblib==1.1.0
 kaggle==1.5.12
@@ -48,26 +47,25 @@ llvmlite==0.36.0
 lxml==4.7.1
 Markdown==3.3.6
 matplotlib==3.4.3
-mediapipe==0.8.9.1
 neural-structured-learning==1.3.1
 numba==0.53.0
 numpy==1.21.5
 oauthlib==3.2.0
-opencv-contrib-python==4.5.5.62
+opencv-python==4.5.5.62
 opencv-python-headless==4.5.5.62
 opt-einsum==3.3.0
 packaging==21.3
 pandas==1.3.5
-Pillow==9.0.0
+Pillow==9.0.1
 pooch==1.6.0
 promise==2.3
-proto-plus==1.19.9
+proto-plus==1.20.0
 protobuf==3.19.4
 psutil==5.9.0
 py-cpuinfo==8.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pybind11==2.9.0
+pybind11==2.9.1
 pycparser==2.21
 pyparsing==3.0.7
 python-dateutil==2.8.2
@@ -80,7 +78,6 @@ resampy==0.2.2
 rsa==4.8
 scikit-learn==1.0.2
 scipy==1.7.3
-seaborn==0.11.2
 sentencepiece==0.1.96
 six==1.16.0
 SoundFile==0.10.3.post1
@@ -89,25 +86,27 @@ tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 tensorflow==2.7.0
 tensorflow-addons==0.15.0
-tensorflow-datasets==4.5.0
+tensorflow-datasets==4.5.2
 tensorflow-estimator==2.7.0
 tensorflow-hub==0.12.0
-tensorflow-io-gcs-filesystem==0.23.1
+tensorflow-io-gcs-filesystem==0.24.0
 tensorflow-metadata==1.6.0
-tensorflow-model-optimization==0.7.0
+tensorflow-model-optimization==0.7.1
 tensorflowjs==3.13.0
 termcolor==1.1.0
 text-unidecode==1.3
+tf-estimator-nightly==2.8.0.dev2021122109
 tf-models-official==2.3.0
 tf-slim==1.1.0
+tflite==2.4.0
 tflite-model-maker==0.3.4
 tflite-support==0.3.1
-threadpoolctl==3.0.0
+threadpoolctl==3.1.0
 tqdm==4.62.3
 typeguard==2.13.3
-typing_extensions==4.0.1
+typing-extensions==4.0.1
 uritemplate==4.1.1
 urllib3==1.25.11
-Werkzeug==2.0.2
+Werkzeug==2.0.3
 wrapt==1.13.3
 zipp==3.7.0
